2020-01-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* configure.ac: Version 20200117.

2019-11-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Add -v option for more verbosity.
	For now, only the parameter table of TFM/OFM is dumped.

2019-08-27  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Show FONTDIR of OFM format.

2019-02-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Forbid too long file name.

2019-02-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* chkdvifont.c: Detect new JFM spec.
	* chkdvifont.man, dvispc.man: Add fallback TeX and LaTeX logos.
	* configure.ac: Version 20190206.
	* Makefile.am: Adjusted for new tests.

2018-11-25  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* configure.ac: Version 20181125.

2018-11-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c, dvispc.man, dvispc-{ja,en}.txt: Better help message.

2018-10-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.test: Add tests for underflow.
	* tests/under.{tex,dvi}, tests/underout.dvi: New tests.
	* Makefile.am: Adjusted.

2018-10-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Use common routine for EXE2MODIFY and EXE2CHECK
	for simplicity.
	* dvispc.test: Add tests for consistency between EXE2MODIFY
	and EXE2CHECK.
	* tests/oldindep.dry, tests/tpicpn.dry, tests/tpicsh.dry,
	tests/reverse.dry, tests/first.dry, tests/firstpn.dry:
	New tests.
	* Makefile.am: Adjusted.

2018-10-14  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* dvispc.c: Fix a bug that modification of non-stack
	specials was almost broken (my fault when prior scanning
	was introduced). Minimize correction for tpic_pn, report
	effective tpic_pn properly.
	* tests/tpicpn.{tex,dvi}, tests/tpicsh.{tex,dvi},
	tests/first.{tex,dvi}, tests/firstpn.{tex,dvi}: New tests.
	* Makefile.am: Adjusted.
	* configure.ac: Version 20181014.
